// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx context tree > context tree > ctx tree 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "A",
            },
          ],
          "name": "B",
        },
        {
          "children": [],
          "name": "A",
        },
      ],
      "name": "A",
    },
  ],
  "name": "App",
}
`;

exports[`jsx context tree > context tree > html 1`] = `
<div
  id="app"
>
  <div
    class="A"
  >
    <span>
      a
    </span>
    <span>
      1
    </span>
    <div
      class="B"
    >
      <span>
        b
      </span>
      <span>
        2
      </span>
      <div
        class="A"
      >
        <span>
          a
        </span>
      </div>
      <!--Fragment-->
    </div>
    <div
      class="A"
    >
      <span>
        a
      </span>
    </div>
    <span>
      3
    </span>
    <!--Fragment-->
  </div>
</div>
`;

exports[`jsx context tree > instance Component inside Component > ctx tree 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "A",
            },
          ],
          "name": "B",
        },
        {
          "children": [],
          "name": "A",
        },
      ],
      "name": "A",
    },
  ],
  "name": "App",
}
`;

exports[`jsx context tree > instance Component inside Component > html 1`] = `
<div
  id="app"
>
  <div
    class="A"
  >
    <span>
      a
    </span>
    <div
      class="B"
    >
      <span>
        b
      </span>
      <div>
        <div
          class="A"
        >
          <span>
            a
          </span>
        </div>
      </div>
      <!--Fragment-->
    </div>
    <div
      class="A"
    >
      <span>
        a
      </span>
    </div>
    <!--Fragment-->
  </div>
</div>
`;
